--- a/css/hero.css
+++ b/css/hero.css
@@ -1,23 +1,77 @@
 body{
     margin: 0;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
-
-header{
-    background-color: chocolate;
+    font-family: Helvetica, Arial, Sans-serif;
+    font-size: 20px;
+    line-height: 30px;
+  }
+  header{
+    background-color: #C32F27;
     text-align: center;
     padding-top: 50px;
     padding-bottom: 50px;
-
-}
-
-header h1{
+  }
+  h1, h2{
+    font-family: 'Alkatra', cursive;
+  }
+  header h1{
     color: white;
-    
-}
-
-header img{
-    border-radius: 170px;
+    font-size: 50px;
+    }
+  header img{
+    border-radius: 150px;
     width: 300px;
-    border: 20px solid white;
-}
+    height: 275px;
+    border: 10px solid white;
+  }
+  
+  main{
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+  
+  main img{
+    max-width: 100%;
+  }
+  
+  main ul img{
+   max-width: 25%; 
+  }
+  
+h2{
+ font-size: 35px;
+ color: #58a452;
+ margin: 40px 0 10px
+ }
+  
+  a{
+    color: #58a452;
+  }
+  a:hover{
+    color: white;
+    background-color: #483a94;
+  }
+  footer{
+    background-color: #C32F27;
+    text-align: center;
+    color: white;
+    padding: 50px;
+  }
+  footer p{
+    margin: 0;
+  }
+  footer a{
+    color: white;
+  }
+  footer a:hover{
+    opacity: .5;
+    background-color: transparent;
+  }
+  
+  p.caption{
+    color: #999999;
+    font-style: italic;
+    margin-top: 0;
+  }
+  
+ 
